Fix to Linux system